[gd_scene load_steps=17 format=3 uid="uid://6b2fnxsp2l43"]

[ext_resource type="PackedScene" uid="uid://dcrdncdcmw4yn" path="res://Scenes/Components/selectable.tscn" id="1_6lqn4"]
[ext_resource type="Script" uid="uid://dcp5qyk5kkhqi" path="res://Scripts/Puzzles/circle_path.gd" id="2_5ukdd"]
[ext_resource type="PackedScene" uid="uid://cssdq2qgtboc6" path="res://Scenes/Components/conductive.tscn" id="2_bv0xu"]

[sub_resource type="Curve3D" id="Curve3D_313hn"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, -0.0980171, 0, -0.995185, 0, 0, 0, 0, 0, 0, -0.19509, 0, -0.980785, 0, 0, 0, 0, 0, 0, -0.290285, 0, -0.95694, 0, 0, 0, 0, 0, 0, -0.382683, 0, -0.92388, 0, 0, 0, 0, 0, 0, -0.471397, 0, -0.881921, 0, 0, 0, 0, 0, 0, -0.55557, 0, -0.83147, 0, 0, 0, 0, 0, 0, -0.634393, 0, -0.77301, 0, 0, 0, 0, 0, 0, -0.707107, 0, -0.707107, 0, 0, 0, 0, 0, 0, -0.77301, 0, -0.634393, 0, 0, 0, 0, 0, 0, -0.83147, 0, -0.55557, 0, 0, 0, 0, 0, 0, -0.881921, 0, -0.471397, 0, 0, 0, 0, 0, 0, -0.92388, 0, -0.382683, 0, 0, 0, 0, 0, 0, -0.95694, 0, -0.290285, 0, 0, 0, 0, 0, 0, -0.980785, 0, -0.19509, 0, 0, 0, 0, 0, 0, -0.995185, 0, -0.0980171, 0, 0, 0, 0, 0, 0, -1, 0, 4.37114e-08, 0, 0, 0, 0, 0, 0, -0.995185, 0, 0.0980171, 0, 0, 0, 0, 0, 0, -0.980785, 0, 0.19509, 0, 0, 0, 0, 0, 0, -0.95694, 0, 0.290285, 0, 0, 0, 0, 0, 0, -0.92388, 0, 0.382683, 0, 0, 0, 0, 0, 0, -0.881921, 0, 0.471397, 0, 0, 0, 0, 0, 0, -0.83147, 0, 0.55557, 0, 0, 0, 0, 0, 0, -0.77301, 0, 0.634393, 0, 0, 0, 0, 0, 0, -0.707107, 0, 0.707107, 0, 0, 0, 0, 0, 0, -0.634393, 0, 0.77301, 0, 0, 0, 0, 0, 0, -0.55557, 0, 0.83147, 0, 0, 0, 0, 0, 0, -0.471397, 0, 0.881921, 0, 0, 0, 0, 0, 0, -0.382683, 0, 0.92388, 0, 0, 0, 0, 0, 0, -0.290285, 0, 0.95694, 0, 0, 0, 0, 0, 0, -0.19509, 0, 0.980785, 0, 0, 0, 0, 0, 0, -0.0980171, 0, 0.995185, 0, 0, 0, 0, 0, 0, 8.74228e-08, 0, 1, 0, 0, 0, 0, 0, 0, 0.098017, 0, 0.995185, 0, 0, 0, 0, 0, 0, 0.19509, 0, 0.980785, 0, 0, 0, 0, 0, 0, 0.290285, 0, 0.95694, 0, 0, 0, 0, 0, 0, 0.382683, 0, 0.92388, 0, 0, 0, 0, 0, 0, 0.471397, 0, 0.881921, 0, 0, 0, 0, 0, 0, 0.55557, 0, 0.83147, 0, 0, 0, 0, 0, 0, 0.634393, 0, 0.773011, 0, 0, 0, 0, 0, 0, 0.707107, 0, 0.707107, 0, 0, 0, 0, 0, 0, 0.77301, 0, 0.634393, 0, 0, 0, 0, 0, 0, 0.831469, 0, 0.55557, 0, 0, 0, 0, 0, 0, 0.881921, 0, 0.471397, 0, 0, 0, 0, 0, 0, 0.92388, 0, 0.382684, 0, 0, 0, 0, 0, 0, 0.95694, 0, 0.290285, 0, 0, 0, 0, 0, 0, 0.980785, 0, 0.19509, 0, 0, 0, 0, 0, 0, 0.995185, 0, 0.0980169, 0, 0, 0, 0, 0, 0, 1, 0, -1.19249e-08, 0, 0, 0, 0, 0, 0, 0.995185, 0, -0.098017, 0, 0, 0, 0, 0, 0, 0.980785, 0, -0.19509, 0, 0, 0, 0, 0, 0, 0.95694, 0, -0.290285, 0, 0, 0, 0, 0, 0, 0.923879, 0, -0.382684, 0, 0, 0, 0, 0, 0, 0.881921, 0, -0.471397, 0, 0, 0, 0, 0, 0, 0.83147, 0, -0.55557, 0, 0, 0, 0, 0, 0, 0.77301, 0, -0.634393, 0, 0, 0, 0, 0, 0, 0.707107, 0, -0.707107, 0, 0, 0, 0, 0, 0, 0.634393, 0, -0.773011, 0, 0, 0, 0, 0, 0, 0.55557, 0, -0.83147, 0, 0, 0, 0, 0, 0, 0.471397, 0, -0.881921, 0, 0, 0, 0, 0, 0, 0.382683, 0, -0.92388, 0, 0, 0, 0, 0, 0, 0.290285, 0, -0.95694, 0, 0, 0, 0, 0, 0, 0.19509, 0, -0.980785, 0, 0, 0, 0, 0, 0, 0.0980172, 0, -0.995185, 0, 0, 0, 0, 0, 0, 0, 0, -1),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 65

[sub_resource type="SphereShape3D" id="SphereShape3D_n0ula"]
radius = 0.164075

[sub_resource type="CylinderMesh" id="CylinderMesh_1jfqj"]
top_radius = 0.25
bottom_radius = 0.15

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ng5dl"]
albedo_color = Color(0.968967, 0.242554, 0.387098, 1)

[sub_resource type="SphereMesh" id="SphereMesh_gn82m"]
material = SubResource("StandardMaterial3D_ng5dl")
radial_segments = 12

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v4hlv"]
albedo_color = Color(0.497771, 0.61042, 0.259164, 1)

[sub_resource type="SphereMesh" id="SphereMesh_5kx60"]
material = SubResource("StandardMaterial3D_v4hlv")
radial_segments = 12

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1e4s5"]
radius = 0.25

[sub_resource type="BoxShape3D" id="BoxShape3D_r8ggv"]
size = Vector3(0.3, 2, 0.6)

[sub_resource type="BoxShape3D" id="BoxShape3D_u8pwm"]
size = Vector3(0.3, 2, 0.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7slvs"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.00809925, 0.597896, 0.972497, 0.188235)

[sub_resource type="SphereMesh" id="SphereMesh_xd4e7"]
material = SubResource("StandardMaterial3D_7slvs")
radius = 0.1
height = 0.2

[sub_resource type="MultiMesh" id="MultiMesh_k6lce"]
transform_format = 1
instance_count = 64
mesh = SubResource("SphereMesh_xd4e7")
buffer = PackedFloat32Array(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, -1, 1, 0, 0, -0.0980171, 0, 1, 0, 0, 0, 0, 1, -0.995185, 1, 0, 0, -0.19509, 0, 1, 0, 0, 0, 0, 1, -0.980785, 1, 0, 0, -0.290285, 0, 1, 0, 0, 0, 0, 1, -0.95694, 1, 0, 0, -0.382683, 0, 1, 0, 0, 0, 0, 1, -0.92388, 1, 0, 0, -0.471397, 0, 1, 0, 0, 0, 0, 1, -0.881921, 1, 0, 0, -0.55557, 0, 1, 0, 0, 0, 0, 1, -0.83147, 1, 0, 0, -0.634393, 0, 1, 0, 0, 0, 0, 1, -0.77301, 1, 0, 0, -0.707107, 0, 1, 0, 0, 0, 0, 1, -0.707107, 1, 0, 0, -0.77301, 0, 1, 0, 0, 0, 0, 1, -0.634393, 1, 0, 0, -0.83147, 0, 1, 0, 0, 0, 0, 1, -0.55557, 1, 0, 0, -0.881921, 0, 1, 0, 0, 0, 0, 1, -0.471397, 1, 0, 0, -0.92388, 0, 1, 0, 0, 0, 0, 1, -0.382683, 1, 0, 0, -0.95694, 0, 1, 0, 0, 0, 0, 1, -0.290285, 1, 0, 0, -0.980785, 0, 1, 0, 0, 0, 0, 1, -0.19509, 1, 0, 0, -0.995185, 0, 1, 0, 0, 0, 0, 1, -0.0980171, 1, 0, 0, -1, 0, 1, 0, 0, 0, 0, 1, 4.37114e-08, 1, 0, 0, -0.995185, 0, 1, 0, 0, 0, 0, 1, 0.0980171, 1, 0, 0, -0.980785, 0, 1, 0, 0, 0, 0, 1, 0.19509, 1, 0, 0, -0.95694, 0, 1, 0, 0, 0, 0, 1, 0.290285, 1, 0, 0, -0.92388, 0, 1, 0, 0, 0, 0, 1, 0.382683, 1, 0, 0, -0.881921, 0, 1, 0, 0, 0, 0, 1, 0.471397, 1, 0, 0, -0.83147, 0, 1, 0, 0, 0, 0, 1, 0.55557, 1, 0, 0, -0.77301, 0, 1, 0, 0, 0, 0, 1, 0.634393, 1, 0, 0, -0.707107, 0, 1, 0, 0, 0, 0, 1, 0.707107, 1, 0, 0, -0.634393, 0, 1, 0, 0, 0, 0, 1, 0.77301, 1, 0, 0, -0.55557, 0, 1, 0, 0, 0, 0, 1, 0.83147, 1, 0, 0, -0.471397, 0, 1, 0, 0, 0, 0, 1, 0.881921, 1, 0, 0, -0.382683, 0, 1, 0, 0, 0, 0, 1, 0.92388, 1, 0, 0, -0.290285, 0, 1, 0, 0, 0, 0, 1, 0.95694, 1, 0, 0, -0.19509, 0, 1, 0, 0, 0, 0, 1, 0.980785, 1, 0, 0, -0.0980171, 0, 1, 0, 0, 0, 0, 1, 0.995185, 1, 0, 0, 8.74228e-08, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0.098017, 0, 1, 0, 0, 0, 0, 1, 0.995185, 1, 0, 0, 0.19509, 0, 1, 0, 0, 0, 0, 1, 0.980785, 1, 0, 0, 0.290285, 0, 1, 0, 0, 0, 0, 1, 0.95694, 1, 0, 0, 0.382683, 0, 1, 0, 0, 0, 0, 1, 0.92388, 1, 0, 0, 0.471397, 0, 1, 0, 0, 0, 0, 1, 0.881921, 1, 0, 0, 0.55557, 0, 1, 0, 0, 0, 0, 1, 0.83147, 1, 0, 0, 0.634393, 0, 1, 0, 0, 0, 0, 1, 0.773011, 1, 0, 0, 0.707107, 0, 1, 0, 0, 0, 0, 1, 0.707107, 1, 0, 0, 0.77301, 0, 1, 0, 0, 0, 0, 1, 0.634393, 1, 0, 0, 0.831469, 0, 1, 0, 0, 0, 0, 1, 0.55557, 1, 0, 0, 0.881921, 0, 1, 0, 0, 0, 0, 1, 0.471397, 1, 0, 0, 0.92388, 0, 1, 0, 0, 0, 0, 1, 0.382684, 1, 0, 0, 0.95694, 0, 1, 0, 0, 0, 0, 1, 0.290285, 1, 0, 0, 0.980785, 0, 1, 0, 0, 0, 0, 1, 0.19509, 1, 0, 0, 0.995185, 0, 1, 0, 0, 0, 0, 1, 0.0980169, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, -1.19249e-08, 1, 0, 0, 0.995185, 0, 1, 0, 0, 0, 0, 1, -0.098017, 1, 0, 0, 0.980785, 0, 1, 0, 0, 0, 0, 1, -0.19509, 1, 0, 0, 0.95694, 0, 1, 0, 0, 0, 0, 1, -0.290285, 1, 0, 0, 0.923879, 0, 1, 0, 0, 0, 0, 1, -0.382684, 1, 0, 0, 0.881921, 0, 1, 0, 0, 0, 0, 1, -0.471397, 1, 0, 0, 0.83147, 0, 1, 0, 0, 0, 0, 1, -0.55557, 1, 0, 0, 0.77301, 0, 1, 0, 0, 0, 0, 1, -0.634393, 1, 0, 0, 0.707107, 0, 1, 0, 0, 0, 0, 1, -0.707107, 1, 0, 0, 0.634393, 0, 1, 0, 0, 0, 0, 1, -0.773011, 1, 0, 0, 0.55557, 0, 1, 0, 0, 0, 0, 1, -0.83147, 1, 0, 0, 0.471397, 0, 1, 0, 0, 0, 0, 1, -0.881921, 1, 0, 0, 0.382683, 0, 1, 0, 0, 0, 0, 1, -0.92388, 1, 0, 0, 0.290285, 0, 1, 0, 0, 0, 0, 1, -0.95694, 1, 0, 0, 0.19509, 0, 1, 0, 0, 0, 0, 1, -0.980785, 1, 0, 0, 0.0980172, 0, 1, 0, 0, 0, 0, 1, -0.995185)

[node name="ColumnPath" type="Path3D" node_paths=PackedStringArray("multi_meshinstance")]
curve = SubResource("Curve3D_313hn")
script = ExtResource("2_5ukdd")
multi_meshinstance = NodePath("MultiMeshInstance3D")
NUM_POINTS = 64

[node name="PathFollow3D" type="PathFollow3D" parent="."]
transform = Transform3D(-0.049063, 0, 0.998698, 0, 1, 0, -0.998698, 0, -0.049063, 0, 1, -1)
v_offset = 1.0

[node name="Conductive" parent="PathFollow3D" instance=ExtResource("2_bv0xu")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PathFollow3D/Conductive"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("SphereShape3D_n0ula")

[node name="LogicColumn" type="AnimatableBody3D" parent="PathFollow3D" groups=["Conductive"]]
sync_to_physics = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="PathFollow3D/LogicColumn"]
gi_mode = 2
mesh = SubResource("CylinderMesh_1jfqj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PathFollow3D/LogicColumn/MeshInstance3D"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -0.0098145, 0, 0.199779)
mesh = SubResource("SphereMesh_gn82m")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="PathFollow3D/LogicColumn/MeshInstance3D"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0.00981456, 0, -0.199779)
mesh = SubResource("SphereMesh_5kx60")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PathFollow3D/LogicColumn"]
shape = SubResource("CylinderShape3D_1e4s5")

[node name="RightSelectable" parent="PathFollow3D/LogicColumn" node_paths=PackedStringArray("mesh_instance") instance=ExtResource("1_6lqn4")]
transform = Transform3D(-8.9407e-08, 0, -1, 0, 1, 0, 1, 0, -8.9407e-08, 0, 0, 0)
interaction_name = "Push Left"
secondary_interaction_name = "Push"
mesh_instance = NodePath("../MeshInstance3D/MeshInstance3D2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PathFollow3D/LogicColumn/RightSelectable"]
transform = Transform3D(1, 0, 0, 0, 0.999998, 0, 0, 0, 1, -0.16, 0, 0)
shape = SubResource("BoxShape3D_r8ggv")

[node name="LeftSelectable" parent="PathFollow3D/LogicColumn" node_paths=PackedStringArray("mesh_instance") instance=ExtResource("1_6lqn4")]
transform = Transform3D(-8.9407e-08, 0, -1, 0, 1, 0, 1, 0, -8.9407e-08, 0, 0, 0)
interaction_name = "Push Right"
secondary_interaction_name = "Push"
mesh_instance = NodePath("../MeshInstance3D/MeshInstance3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PathFollow3D/LogicColumn/LeftSelectable"]
transform = Transform3D(1, 0, 0, 0, 0.999998, 0, 0, 0, 1, 0.16, 0, 0)
shape = SubResource("BoxShape3D_u8pwm")

[node name="MultiMeshInstance3D" type="MultiMeshInstance3D" parent="."]
gi_mode = 0
multimesh = SubResource("MultiMesh_k6lce")
